--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,23 @@
 {
-    "name": "laravel/lumen",
-    "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "name": "ngabor84/booking-api",
+    "description": "Laravel Lumen based REST-API for booking",
+    "keywords": ["api", "booking", "laravel", "lumen"],
     "license": "MIT",
     "type": "project",
+    "authors": [
+        {
+            "name": "Gábor Németh",
+            "email": "negabor@gmail.com",
+            "homepage": "https://nemeth-gabor.hu",
+            "role": "developer"
+        }
+    ],
     "require": {
-        "php": ">=5.6.4",
-        "laravel/lumen-framework": "5.4.*",
+        "php": ">=7.1",
+        "laravel/lumen-framework": "~5.4",
         "vlucas/phpdotenv": "~2.2",
         "dingo/api": "1.0.*@dev",
-        "tymon/jwt-auth": "^1.0.0",
+        "tymon/jwt-auth": "~1.0",
         "guzzlehttp/guzzle": "~6.0",
         "lukasoppermann/http-status": "^2.0",
         "jakubkratina/lumen-dingo-route-list": "^0.9.5",
@@ -17,8 +25,9 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~5.0",
-        "mockery/mockery": "~0.9"
+        "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "~6.1",
+        "squizlabs/php_codesniffer": "~3.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,9 +42,12 @@
         ]
     },
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ]
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "cs-check": "./vendor/bin/phpcs --colors",
+        "test": "./vendor/bin/phpunit --colors=always"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
