add redis caching

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "guzzlehttp/guzzle": "~6.0",
         "lukasoppermann/http-status": "^2.0",
         "jakubkratina/lumen-dingo-route-list": "^0.9.5",
-        "ngabor84/lumen-api-query-parser": "~1.0"
+        "ngabor84/lumen-api-query-parser": "~1.0",
+        "predis/predis": "~1.0",
+        "illuminate/redis": "~5.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -32,7 +34,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Test\\": "tests"
+            "Test\\": "tests/"
         }
     },
     "autoload-dev": {
