--- a/.env.testing
+++ b/.env.testing
@@ -3,16 +3,10 @@ APP_DEBUG=true
 APP_KEY=dgnREXv9KMJUccyv7rAbY8tMNpbmMnQ2
 APP_TIMEZONE=UTC
 
-DB_CONNECTION=mysql
-DB_HOST=phpmyadmin.dev
-DB_PORT=3306
-DB_DATABASE=booking-api-test
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=testing
 
-CACHE_DRIVER=array
+CACHE_DRIVER=redis
 QUEUE_DRIVER=sync
-SESSION_DRIVER=array
 
 API_STANDARDS_TREE=vnd
 API_SUBTYPE=booking
@@ -22,3 +16,5 @@ API_STRICT=false
 API_DEFAULT_FORMAT=json
 API_DEBUG=true
 API_DOMAIN=booking-api.dev
+
+JWT_SECRET=QXCgJ3Tv3qKemsZ5X2bSvPYpfFq1Go4Q
