--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
             "@test"
         ],
         "cs-check": "./vendor/bin/phpcs --colors",
-        "test": "./vendor/bin/phpunit --colors=always"
+        "test": "./vendor/bin/phpunit --colors=always -c phpunit.xml"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
